--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -150,6 +150,7 @@
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
+  text-decoration: none;
 }
 
 #booking-column .column-button {
@@ -207,7 +208,7 @@
   
 }
 
-
 body {
   color: white;
 }
+
